# Project-C--

./: .gitignore
11.7/: complex0.cpp  complex0.h
Chapter 10/: EigthTack.cpp  EigthTackMain.cpp  EigthTask.cpp  EigthTask.h  EigthTaskMain.cpp  FifthTackMain.cpp  FifthTackStack.cpp  FifthTackStack.h  FifthTackStruct.h  FifthTaskMain.cpp  FifthTaskStack.cpp  FifthTaskStack.h  FirstTack.cpp  FirstTack.h  FirstTackMain.cpp  FirstTask.cpp  FirstTaskMain.cpp  FourthTack.cpp  FourthTask.h  FourthTaskMain.cpp  SecondTack.cpp  SecondTackMain.cpp  SecondTask.h  SeventhTack.cpp  SeventhTack.h  SeventhTackMain.cpp  SixthTackMain.cpp  SixthTask.cpp  SixthTask.h  ThirdTack.cpp  ThirdTack.h  ThirdTackMain.cpp  ThirdTask.cpp  ThirdTaskMain.cpp
Chapter 11/: FirstTack.cpp  SecondTask.cpp  Vect.cpp  Vect2.cpp  step.txt  vect.h  vect2.h
Chapter 13/FirstTack/: CMakeLists.txt  Cd.h  Classic.cpp  FirstTack.cpp
Chapter 13/ThirdTask/: CMakeLists.txt  accDMA.cpp  dma.cpp  dma.h
Chapter 2/: 3_Funct.cpp  Age_in_mounths.cpp  Convert.cpp  Fahrenheit.cpp  Main.cpp  MilWay.cpp  Simon.cpp  Time.cpp
Chapter 3/: BMI.cpp  DaysOfSeconds.cpp  DegMinSec.cpp  FlowMeter.cpp  LitersToGallons.cpp  Morechar.cpp  PopCounTuTheWorld.cpp  RostInch.cpp
Chapter 4/: EighthTack.cpp  FifthTask.cpp  FirstTask.cpp  FourthTack.cpp  NinthTack.cpp  SecondTask.cpp  SeventhTask.cpp  SixthTask.cpp  TenthTack.cpp  ThirdTack.cpp
Chapter 5/: EighthTask.cpp  FifthTack.cpp  FirstTack.cpp  FourthTask.cpp  NinthTask.cpp  SecondTask.cpp  SeventhTask.cpp  SixthTask.cpp  TenthTask.cpp  ThirdTack.cpp  test.cpp
Test/: Pars.txt  (+2 more)
(+131 files in other folders)
